--- a/app/src/main/res/layout/fragment_pomodoro.xml
+++ b/app/src/main/res/layout/fragment_pomodoro.xml
@@ -45,10 +45,23 @@
             android:gravity="center"
             android:textSize="@dimen/mediumTextSize"
             android:textStyle="italic"
-            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_time_label"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_extra_interval"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_time"
+            tools:text="00:00" />
+
+        <TextView
+            android:id="@+id/pomodoro_fragment_textView_extra_interval"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="@dimen/mediumTextSize"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_time_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_interval"
             tools:text="00:00" />
 
 
@@ -64,7 +77,7 @@
             app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_slider_timer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_interval" />
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_extra_interval" />
 
         <com.google.android.material.slider.RangeSlider
             android:id="@+id/pomodoro_fragment_slider_timer"
@@ -101,11 +114,38 @@
             android:stepSize="05.0"
             android:valueFrom="05.0"
             android:valueTo="60.0"
-            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_button_pause"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_extra_interval_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_interval_label" />
 
+
+
+        <TextView
+            android:id="@+id/pomodoro_fragment_textView_select_extra_interval_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_default"
+            android:layout_marginTop="@dimen/margin_default"
+            android:gravity="center"
+            android:text="@string/pomodoro_fragment_textView_select_extra_interval_label"
+            android:textSize="@dimen/defaultTextSize"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_slider_extra_interval"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_slider_interval" />
+
+        <com.google.android.material.slider.RangeSlider
+            android:id="@+id/pomodoro_fragment_slider_extra_interval"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_default"
+            android:stepSize="05.0"
+            android:valueFrom="15.0"
+            android:valueTo="60.0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_extra_interval_label" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/pomodoro_fragment_button_start"
@@ -134,7 +174,7 @@
             app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_button_stop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/pomodoro_fragment_button_start"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_slider_interval" />
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_slider_extra_interval" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/pomodoro_fragment_button_stop"
@@ -150,6 +190,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_button_start"
             app:layout_constraintVertical_bias="0" />
+
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
