--- a/app/src/main/res/layout/fragment_pomodoro.xml
+++ b/app/src/main/res/layout/fragment_pomodoro.xml
@@ -24,14 +24,14 @@
 
 
         <TextView
-            android:id="@+id/pomodoro_fragment_textView_time"
+            android:id="@+id/pomodoro_fragment_textView_timer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_default"
             android:gravity="center"
             android:textSize="@dimen/bigTextSize"
             android:textStyle="italic"
-            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_interval"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_state"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_animation_chronometer"
@@ -39,34 +39,24 @@
 
 
         <TextView
-            android:id="@+id/pomodoro_fragment_textView_interval"
+            android:id="@+id/pomodoro_fragment_textView_state"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_default"
             android:gravity="center"
-            android:textSize="@dimen/mediumTextSize"
+            android:textSize="@dimen/defaultTextSize"
             android:textStyle="italic"
-            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_extra_interval"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_pomodoro_timer_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_time"
-            tools:text="00:00" />
-
-        <TextView
-            android:id="@+id/pomodoro_fragment_textView_extra_interval"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="@dimen/mediumTextSize"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_time_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_interval"
-            tools:text="00:00" />
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_timer"
+            tools:text="00:00"
+            android:visibility="gone"
+            android:background="@color/customYellow"/>
 
 
         <TextView
-            android:id="@+id/pomodoro_fragment_textView_select_time_label"
+            android:id="@+id/pomodoro_fragment_textView_select_pomodoro_timer_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_default"
@@ -77,7 +67,7 @@
             app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_slider_timer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_extra_interval" />
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_state" />
 
         <com.google.android.material.slider.RangeSlider
             android:id="@+id/pomodoro_fragment_slider_timer"
@@ -87,13 +77,13 @@
             android:stepSize="5"
             android:valueFrom="5.0"
             android:valueTo="60.0"
-            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_interval_label"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_interval_timer_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_time_label" />
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_pomodoro_timer_label" />
 
         <TextView
-            android:id="@+id/pomodoro_fragment_textView_select_interval_label"
+            android:id="@+id/pomodoro_fragment_textView_select_interval_timer_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_default"
@@ -114,15 +104,15 @@
             android:stepSize="05.0"
             android:valueFrom="05.0"
             android:valueTo="60.0"
-            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_extra_interval_label"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_extra_interval_timer_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_interval_label" />
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_interval_timer_label" />
 
 
 
         <TextView
-            android:id="@+id/pomodoro_fragment_textView_select_extra_interval_label"
+            android:id="@+id/pomodoro_fragment_textView_select_extra_interval_timer_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_default"
@@ -145,7 +135,7 @@
             android:valueTo="60.0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_extra_interval_label" />
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_extra_interval_timer_label" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/pomodoro_fragment_button_start"
